# duet_charter

./: .gitignore  Cargo.toml  Trunk.toml  bacon.toml  readme.md
.github/workflows/: pages.yml  rust.yml
charts/Adagio - Second Sight [Peddy]/: notes.chart
charts/After the Burial - Sleeper [ΩHM]/: notes.chart
charts/Aldious - Spirit Black [Spachi]/: notes.chart
charts/Alice in Chains - Sludge Factory (Unplugged) [7777villain]/: notes.chart
charts/Allan Holdsworth - Secrets [ΩHM]/: notes.chart
charts/Allegaeon - Saturnine [Miscellany]/: notes.chart
charts/Almanac - Self-Blinded Eyes [Peddy]/: notes.chart
charts/Amyl and The Sniffers - Some Mutts (Can't Be Muzzled) [Chezy]/: notes.chart
charts/Andy James - Synergy [Peddy]/: notes.chart
charts/Andy Rowland, Ant Law - SOC [Inixix, HattMeafy]/: notes.chart
charts/Anthriel - Siren's Song [Peddy]/: notes.chart
charts/Archspire - Scream Feeding [ΩHM]/: notes.chart
charts/Archspire - Seven Crowns and the Oblivion Chain [iZenPenguin]/: notes.chart
charts/Artension - Song of the Desert [Peddy]/: notes.chart
charts/Atarashii Gakko! - Shiken Zenya [Spachi]/: notes.chart
charts/Azure - Self-Crucifixion [Miscellany]/: notes.chart
charts/BABYMETAL - Sis. Anger [Spachi]/: notes.chart
charts/BAND-MAID - So, What [Spachi]/: notes.chart
charts/BEMANI Sound Team Yvya - Saiph (GITADORA HIGH-VOLTAGE) [GuitarZero132]/: notes.chart
charts/Battle Beast - Speed And Danger [HattMeafy]/: notes.chart
charts/Blitz Lunar - Sirius Bismuth [Peddy]/: notes.chart
charts/Blood Incantation - Slave Species of the Gods [ΩHM]/: notes.chart
charts/Blur - Star Shaped [ΩHM]/: notes.chart
charts/Bob Katsionis - Scary Groovie [iZenPenguin]/: notes.chart
charts/Brothers of Metal - Son of Odin [torqqes]/: notes.chart
charts/Buckethead - S [Peddy]/: notes.chart
charts/Bumblefoot - Swatting Flies [Peddy]/: notes.chart
charts/Caligula's Horse - Songs for No One [iZenPenguin]/: notes.chart
charts/Candlemass - Solitude [7777villain]/: notes.chart
charts/Cannibal Corpse - Sarcophagic Frenzy [ΩHM]/: notes.chart
charts/Car Bomb - Solid Grey [ΩHM]/: notes.chart
charts/Casiopea - Swallow [Peddy]/: notes.chart
charts/Cat Company - Sad Dance [iZenPenguin]/: notes.chart
charts/Christopher Larkin - Sealed Vessel [TFG85]/: notes.chart
charts/Circus Maximus - Sin [iZenPenguin]/: notes.chart
charts/Code Orange - Sulfur Surrounding [Miscellany]/: notes.chart
charts/Code of Perfection - Shred It! [Peddy]/: notes.chart
charts/Cryptopsy - Slit Your Guts [iZenPenguin]/: notes.chart
charts/DEZOLVE - Shaping the Future [ΩHM]/: notes.chart
charts/DGM - Some Day, One Day [Peddy]/: notes.chart
charts/Darkest Hour - Sound the Surrender [Miscellany]/: notes.chart
charts/Darude & John Coltrane - Sandstorm but it's Giant Steps [ΩHM]/: notes.chart
charts/David Maxim Micic - Smile (feat. Jeff Loomis) [iZenPenguin]/: notes.chart
charts/Death - See Through Dreams [7777villain]/: notes.chart
charts/Die Mayrhofner -Schei-wi-dei-wi-du [TFG85]/: notes.chart
charts/Dio - Stand Up and Shout [Peddy]/: notes.chart
charts/DragonForce - Soldiers of the Wasteland [Peddy]/: notes.chart
charts/DragonForce - Storming the Burning Fields [iZenPenguin]/: notes.chart
charts/DragonForce - Symphony of the Night [Miscellany]/: notes.chart
charts/Dream Theater - 01. Scene One - Regression [Peddy]/: notes.chart
charts/Dream Theater - 02. Scene Two - I. Overture 1928 [Peddy]/: notes.chart
charts/Dream Theater - 03. Scene Two - II. Strange Déjà Vu [Peddy]/: notes.chart
charts/Dream Theater - 04. Scene Three - I. Through My Words [Peddy]/: notes.chart
charts/Dream Theater - 05. Scene Three - II. Fatal Tragedy [Peddy]/: notes.chart
charts/Dream Theater - 06. Scene Four - Beyond This Life [Peddy]/: notes.chart
charts/Dream Theater - 07. Scene Five - Through Her Eyes [Peddy]/: notes.chart
charts/Dream Theater - 08. Scene Six - Home [Peddy]/: notes.chart
charts/Dream Theater - 09. Scene Seven - I. The Dance of Eternity [Peddy]/: notes.chart
charts/Dream Theater - 10. Scene Seven - II. One Last Time [Peddy]/: notes.chart
charts/Dream Theater - 11. Scene Eight - The Spirit Carries On [Peddy]/: notes.chart
charts/Dream Theater - 12. Scene Nine - Finally Free [Peddy]/: notes.chart
charts/Dream Theater - S2N [Peddy]/: notes.chart
charts/Dream Theater - Scenes From a Memory (Full Album) [Peddy]/: notes.chart
duet_charter_bin/: Cargo.toml  readme.md
duet_charter_bin/src/: main.rs
duet_charter_lib/: Cargo.toml  readme.md
duet_charter_web/: Cargo.toml  index.html  readme.md
duet_charter_web/src/: main.rs
lyric_charter_bin/: Cargo.toml  LICENSE.md
lyric_charter_bin/src/: main.rs
lyric_charter_lib/: Cargo.toml
lyric_charter_lib/src/: chart.rs  lib.rs  phrases.rs
lyric_charter_web/: Cargo.toml
lyric_charter_web/src/: main.rs
src/: chart.rs  main.rs  phrases.rs
(+163 files in other folders)
