[package]
name = "duet_charter_web"
version = "0.1.1"
edition = "2021"
description = "Browser based duet charting tool for Clone Hero .chart files!"
repository = "https://github.com/aragonnetje6/lyric_charter"
keywords = ["CloneHero", "web"]
categories = ["parser-implementations", "games", "game-development"]
license-file = "LICENSE.md"

[dependencies]
duet_charter_lib = { path = "../duet_charter_lib", version = "0.1.1" }
eyre = "0.6.8"
gloo = "0.8.0"
js-sys = "0.3.59"
web-sys = { version = "0.3.59", features = ["Blob"] }
yew = "0.19.3"
