[package]
name = "lyric_charter_lib"
version = "0.1.0"
edition = "2021"
description = "Lyric charting library for Clone Hero .chart files!"
repository = "https://github.com/aragonnetje6/lyric_charter"
keywords = ["CloneHero"]
categories = ["parser-implementations", "games", "game-development"]
license-file = "LICENSE.md"

[dependencies]
eyre = "0.6.8"
regex = "1.6.0"
