[package]
name = "lyric_charter_web"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Browser based lyric charting tool for Clone Hero .chart files!"
repository = "https://github.com/aragonnetje6/lyric_charter"
keywords = ["CloneHero", "web"]
categories = ["Parser Implementations", "Games", "Game Development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyric_charter_lib = { path = "../lyric_charter_lib" }
gloo = "0.8.0"
js-sys = "0.3.59"
web-sys = { version = "0.3.59", features = ["Blob"] }
yew = "0.19.3"
eyre = "0.6.8"